# nwchem

./: CMakeLists.txt
cmake/: globalarrays.cmake  set_compile_flags.cmake  set_compile_flags_debug.cmake  set_options.cmake
cmake/toolchains/: cascade-intel-impi-mkl.cmake  gcc63-triples.cmake  gcc63.cmake  gcc72.cmake  intel-openmpi-mkl.cmake  intel18.cmake  macosx-gcc-openmpi-netlib.cmake
src/: CMakeLists.txt  stubs_cmake.F
src/64to32blas/: CMakeLists.txt
src/NWints/: CMakeLists.txt
src/NWints/api/: CMakeLists.txt
src/NWints/auxil/: CMakeLists.txt
src/NWints/deriv/: CMakeLists.txt
src/NWints/dk/: CMakeLists.txt
src/NWints/ecp/: CMakeLists.txt
src/NWints/hondo/: CMakeLists.txt
src/NWints/int/: CMakeLists.txt
src/NWints/ints_sp/: CMakeLists.txt
src/NWints/rel/: CMakeLists.txt
src/NWints/simint/: CMakeLists.txt
src/NWints/texas/: CMakeLists.txt
src/analyz/: CMakeLists.txt
src/atomscf/: CMakeLists.txt
src/basis/: CMakeLists.txt
src/blas/: CMakeLists.txt
src/bq/: CMakeLists.txt
src/cafe/: CMakeLists.txt
src/ccca/: CMakeLists.txt
src/cckohn/: CMakeLists.txt
src/ccsd/: CMakeLists.txt
src/chelp/: CMakeLists.txt
src/cons/: CMakeLists.txt
src/cphf/: CMakeLists.txt
src/dangchang/: CMakeLists.txt
src/ddscf/: CMakeLists.txt
src/develop/: CMakeLists.txt
src/diana/: CMakeLists.txt
src/dimqm/: CMakeLists.txt
src/dntmc/: CMakeLists.txt
src/dplot/: CMakeLists.txt
src/drdy/: CMakeLists.txt
src/driver/: CMakeLists.txt
src/esp/: CMakeLists.txt
src/etrans/: CMakeLists.txt
src/fft/: CMakeLists.txt
src/geninterface/: CMakeLists.txt
src/geom/: CMakeLists.txt
src/gradients/: CMakeLists.txt
src/hessian/: CMakeLists.txt
src/inp/: CMakeLists.txt
src/input/: CMakeLists.txt
src/lapack/: CMakeLists.txt
src/leps/: CMakeLists.txt
src/mcscf/: CMakeLists.txt
src/mm/: CMakeLists.txt
src/moints/: CMakeLists.txt
src/mp2_grad/: CMakeLists.txt
src/ncc/: CMakeLists.txt
src/nwdft/: CMakeLists.txt
src/nwdft/coulomb/: CMakeLists.txt
src/nwdft/dftgrad/: CMakeLists.txt
src/nwdft/grid/: CMakeLists.txt
src/nwdft/lr_tddft/: CMakeLists.txt
src/nwdft/lr_tddft_grad/: CMakeLists.txt
src/nwdft/rt_tddft/: CMakeLists.txt
src/nwdft/scf_dft/: CMakeLists.txt
src/nwdft/scf_dft_cg/: CMakeLists.txt
src/nwdft/so_dft/: CMakeLists.txt
src/nwdft/spec/: CMakeLists.txt
src/nwdft/util/: CMakeLists.txt
src/nwdft/xc/: CMakeLists.txt
src/nwdft/zora/: CMakeLists.txt
src/nwmd/: CMakeLists.txt
src/nwpw/: CMakeLists.txt
src/nwpw/band/: CMakeLists.txt
src/nwpw/libraryps/: CMakeLists.txt
src/nwpw/nwpwlib/: CMakeLists.txt
src/nwpw/nwpwlib/pseudopotential/: CMakeLists.txt
src/nwpw/ofpw/: CMakeLists.txt
src/nwpw/paw/: CMakeLists.txt
src/nwpw/pspw/: CMakeLists.txt
src/nwxc/: CMakeLists.txt
src/optim/: CMakeLists.txt
src/peigs/: CMakeLists.txt
src/perfm/: CMakeLists.txt
src/prepar/: CMakeLists.txt
src/property/: CMakeLists.txt
src/pstat/: CMakeLists.txt
src/qhop/: CMakeLists.txt
src/qmd/: CMakeLists.txt
src/qmmm/: CMakeLists.txt
src/rdmft/: CMakeLists.txt
src/rimp2/: CMakeLists.txt
src/rtdb/: CMakeLists.txt
src/selci/: CMakeLists.txt
src/solvation/: CMakeLists.txt
src/space/: CMakeLists.txt
src/stepper/: CMakeLists.txt
src/symmetry/: CMakeLists.txt
src/task/: CMakeLists.txt
src/tce/: CMakeLists.txt  GNUmakefile  tce_tile.F
src/tce/cc3/: CMakeLists.txt
src/tce/ccd/: CMakeLists.txt
src/tce/ccsd/: CMakeLists.txt
src/tce/ccsd_act/: CMakeLists.txt
src/tce/ccsd_alpha/: CMakeLists.txt
src/tce/ccsd_beta/: CMakeLists.txt
src/tce/ccsd_lambda/: CMakeLists.txt
src/tce/ccsd_qr/: CMakeLists.txt
src/tce/ccsd_t/: CMakeLists.txt  GNUmakefile  ccsd_t_doubles_gpu.F  ccsd_t_gpu.F  direct_sd1.cu  direct_sd2.cu  header.h  memory.cu  sd_t_total.cu  sd_t_total_ttlg.cu
src/tce/ccsd_yr/: CMakeLists.txt
src/tce/ccsdt/: CMakeLists.txt
src/tce/ccsdt_alpha_new/: CMakeLists.txt
src/tce/ccsdt_alpha_offdiag/: CMakeLists.txt
src/tce/ccsdt_beta/: CMakeLists.txt
src/tce/ccsdt_lambda/: CMakeLists.txt
src/tce/ccsdt_yr/: CMakeLists.txt
src/tce/ccsdtq/: CMakeLists.txt
src/tce/ccsdtq_alpha_offdiag/: CMakeLists.txt
src/tce/ccsdtq_lambda/: CMakeLists.txt
src/tce/cis/: CMakeLists.txt
src/tce/cisd/: CMakeLists.txt
src/tce/cisdt/: CMakeLists.txt
src/tce/cisdtq/: CMakeLists.txt
src/tce/cr-eomccsd_t/: CMakeLists.txt
src/tce/cr_eomccsd_t_act/: CMakeLists.txt
src/tce/crop/: CMakeLists.txt
src/tce/diis/: CMakeLists.txt
src/tce/diis2/: CMakeLists.txt
src/tce/diis3/: CMakeLists.txt
src/tce/eaccsd/: CMakeLists.txt
src/tce/emb/: CMakeLists.txt
src/tce/eomccsd/: CMakeLists.txt
src/tce/eomccsd_act/: CMakeLists.txt
src/tce/eomccsdt/: CMakeLists.txt
src/tce/eomccsdtq/: CMakeLists.txt
src/tce/gradients/: CMakeLists.txt
src/tce/ipccsd/: CMakeLists.txt
src/tce/lccd/: CMakeLists.txt
src/tce/lccsd/: CMakeLists.txt
src/tce/lrh/: CMakeLists.txt
src/tce/mbpt1/: CMakeLists.txt
src/tce/mbpt2/: CMakeLists.txt
src/tce/mbpt3/: CMakeLists.txt
src/tce/mbpt4/: CMakeLists.txt
src/tce/mrcc/: CMakeLists.txt
src/tce/mrcc/ccsd/: CMakeLists.txt
src/tce/mrcc/ccsd_sub/: CMakeLists.txt
src/tce/mrcc/ccsd_t/: CMakeLists.txt
src/tce/mrcc/uss/: CMakeLists.txt
src/tce/qcisd/: CMakeLists.txt
src/tce/response/: CMakeLists.txt
src/tce/sort/: CMakeLists.txt
src/tce/ttlg/: CMakeLists.txt  ParameterTuner.cpp  fvigeneralolap.cu  main.cpp
src/tce/ttlg/includes/: macro.h  nohtimestop.h  ourmacros.h
src/util/: CMakeLists.txt
src/vib/: CMakeLists.txt
src/vscf/: CMakeLists.txt
