
if (NOT BLAS_LIBRARIES)
    #add_subdirectory(64to32blas)
    add_subdirectory(blas)
    add_subdirectory(lapack)
    set(BLAS_LIBRARIES nwclapack nwcblas PARENT_SCOPE)
    set(NETLIB_BLAS nwclapack nwcblas PARENT_SCOPE) #64to32blas
endif()

add_subdirectory(inp)
add_subdirectory(vscf)
add_subdirectory(task)
#add_subdirectory(geninterface)
add_subdirectory(rtdb)
add_subdirectory(ncc)
add_subdirectory(space)
add_subdirectory(vib)
add_subdirectory(chelp)
add_subdirectory(dimqm)
add_subdirectory(ccsd)
add_subdirectory(fft)
add_subdirectory(basis)
add_subdirectory(qmmm)
add_subdirectory(property)
add_subdirectory(qhop)
add_subdirectory(mp2_grad)
add_subdirectory(mcscf)
add_subdirectory(symmetry)
#add_subdirectory(leps)
add_subdirectory(nwpw)
add_subdirectory(perfm)
add_subdirectory(pstat)
add_subdirectory(rdmft)
add_subdirectory(ddscf)
add_subdirectory(dplot)
add_subdirectory(gradients)
add_subdirectory(input)
add_subdirectory(peigs)
add_subdirectory(optim)
add_subdirectory(solvation)
add_subdirectory(ccca)
add_subdirectory(NWints)
add_subdirectory(selci)
add_subdirectory(bq)
add_subdirectory(etrans)
add_subdirectory(rimp2)
add_subdirectory(analyz)
add_subdirectory(esp)
add_subdirectory(driver)
add_subdirectory(drdy)
add_subdirectory(dangchang)
add_subdirectory(cons)
add_subdirectory(nwmd)
add_subdirectory(stepper)
add_subdirectory(prepar)
add_subdirectory(cafe)
#add_subdirectory(nwxc)
add_subdirectory(nwdft)
add_subdirectory(hessian)
add_subdirectory(mm)
add_subdirectory(atomscf)
add_subdirectory(cphf)
#add_subdirectory(diana)
add_subdirectory(util)
add_subdirectory(moints)
#add_subdirectory(develop)
add_subdirectory(qmd)
add_subdirectory(dntmc)
add_subdirectory(geom)
add_subdirectory(cckohn)
add_subdirectory(tce)

set(LIBTCE_OPT ${LIBTCE_OPT} PARENT_SCOPE)
set(TCE_CUDA_LIBS ${TCE_CUDA_LIBS} PARENT_SCOPE)
