
set(BLAS_SOURCE_FILES
./single/xerbla.F
single/caxpy.f
single/ccopy.f
single/cdotc.f
single/cdotu.f
single/cgemm.f
single/cgemv.f
single/cgerc.f
single/cgeru.f
single/chemm.f
single/chemv.f
single/cher2.f
single/cher2k.f
single/cherk.f
single/cscal.f
single/csrot.f
single/csscal.f
single/cswap.f
single/ctrmm.f
single/ctrmv.f
single/ctrsm.f
single/ctrsv.f
single/icamax.f
single/isamax.f
single/lsame.f
single/sasum.f
single/saxpy.f
single/scabs1.f
single/scasum.f
single/scnrm2.f
single/scopy.f
single/sdot.f
single/sgemm.f
single/sgemv.f
single/sger.f
single/snrm2.f
single/srot.f
single/sscal.f
single/sspmv.f
single/sspr.f
single/sswap.f
single/ssymm.f
single/ssymv.f
single/ssyr2.f
single/ssyr2k.f
single/ssyr.f
single/ssyrk.f
single/strmm.f
single/strmv.f
single/strsm.f
single/strsv.f
double/dasum.f
double/daxpy.f
double/dcabs1.f
double/dcopy.f
double/ddot.f
#double/dgemm.orig.f
double/dgemv.f
double/dger.f
double/dnrm2.f
double/drot.f
double/drotg.f
double/dscal.f
double/dspmv.f
double/dspr.f
double/dswap.f
double/dsymm.f
double/dsymv.f
double/dsyr2.f
double/dsyr2k.f
double/dsyr.f
double/dsyrk.f
double/dtrmm.f
double/dtrmv.f
double/dtrsm.f
double/dtrsv.f
double/dzasum.f
double/dznrm2.f
double/idamax.f
double/izamax.f
double/lsame.f
double/zaxpy.f
double/zcopy.f
double/zdotc.f
double/zdotu.f
double/zdrot.f
double/zdscal.f
double/zgemm.f
double/zgemv.f
double/zgerc.f
double/zgeru.f
double/zhemm.f
double/zhemv.f
double/zher2.f
double/zher2k.f
double/zher.f
double/zherk.f
double/zrotg.f
double/zscal.f
double/zswap.f
double/zsymm.f
double/zsyr2k.f
double/zsyrk.f
double/ztrmm.f
double/ztrmv.f
double/ztrsm.f
double/ztrsv.f
./double/dgemm.F
./double/xerbla.F
)

add_library(nwcblas STATIC ${BLAS_SOURCE_FILES})
target_include_directories(nwcblas PUBLIC ${NWC_INCLUDES})
target_compile_options(nwcblas PUBLIC ${NWCHEM_Fortran_COMPILE_FLAGS})
target_compile_options(nwcblas PUBLIC ${NWCHEM_Fortran_OPTIMIZE_FLAGS})

